Token List has been added

--- a/src/main/resources/config/config.json
+++ b/src/main/resources/config/config.json
@@ -3,7 +3,7 @@
     "path": "src/main/resources/lexer/keyword.json",
     "priority": 3
   },
-  "Id": {
+  "Identifier": {
     "path": "src/main/resources/lexer/id.json",
     "priority": 0
   },
